--- a/css/main.css
+++ b/css/main.css
@@ -20,29 +20,29 @@ body{
     font-weight: 400;
 }
 
-/* Doniyor's Css start */
+/* Jack's Css start */
 
-/* Doniyor's Css end */
-
-
-
-
-
-/* Sherzodjon's Css start */
-
-/* Sherzodjon's Css end */
-
-
-
-
-/* Javlon's Css start */
-
-/* Javlon's Css end */
+/* Jack's Css end */
 
 
 
 
 
-/* Duebek's Css start */
+/* Ozodbek's Css start */
 
-/* Duebek's Css end */
+/* Ozodbek's Css end */
+
+
+
+
+/* Temurbek's Css start */
+
+/* Temurbek's Css end */
+
+
+
+
+
+/* Ahmad's Css start */
+
+/* Ahmad's Css end */
